Listar e Editar concluidos

--- a/SistemadeVendas/App.config
+++ b/SistemadeVendas/App.config
@@ -5,7 +5,7 @@
 	</startup>
 
 	<connectionStrings>
-		<add name="bdvendas" connectionString="server=localhost; user ID=root; password=''; database=bdvendas"
+		<add name="bdvendas" connectionString="server=localhost; user ID=teste; password=123; database=bdvendas"
 			 providerName="MySql.Data.MySqlClient;" />
 	</connectionStrings>
 </configuration>
