--- a/SistemadeVendas/SistemadeVendas.csproj
+++ b/SistemadeVendas/SistemadeVendas.csproj
@@ -101,6 +101,10 @@
     <Compile Include="br.com.projeto.conexao\ConnectionFactory.cs" />
     <Compile Include="br.com.projeto.dao\ClienteDAO.cs" />
     <Compile Include="br.com.projeto.model\Cliente.cs" />
+    <Compile Include="br.com.projeto.model\Fornecedor.cs" />
+    <Compile Include="br.com.projeto.model\Funcionario.cs" />
+    <Compile Include="br.com.projeto.model\Pessoa.cs" />
+    <Compile Include="br.com.projeto.model\PessoaDAO.cs" />
     <Compile Include="br.com.projeto.view\Frmclientes.cs">
       <SubType>Form</SubType>
     </Compile>
